# Lark.js

./: .gitignore  Discard.html  ImmutableInteractiveParser.html  InteractiveParser.html  Interpreter.html  LICENSE  Lark.html  LarkOptions.html  Lexer.html  LexerState.html  LexerThread.html  README.md  Rule.html  Serialize.html  SerializeMemoizer.html  Token.html  Transformer.html  Transformer_InPlace.html  Transformer_InPlaceRecursive.html  Transformer_NonRecursive.html  Tree.html  UnexpectedCharacters.html  UnexpectedEOF.html  UnexpectedInput.html  UnexpectedToken.html  VisitError.html  Visitor.html  Visitor_Recursive.html  global.html  index.html  jsdoc_conf.json  lark.js.html  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: jsdoc.yml  node.js.yml
examples/: README.md  error_handling.js  error_reporting.js  json.lark  run_json_parser.js  run_python_parser.js
lark-js/: __main__.py  lark.js
larkjs/: __main__.py  lark.js
larkjs/utils/: utils.browser.js  utils.js
test/: json.lark  test.js  test.py  test_interactive.js  test_trees.js  test_utils.js
tests/: lark_tests.js  test_trees.js
