[tool.poetry]
name = "Lark-js"
version = "0.0.3"
description = "An extension to Lark that generates a Javascript standalone"
authors = ["Erez Shin <erezshin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lark-parser/lark.js"
documentation = "https://lark.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
]
packages = [{ include = "larkjs" }]

[tool.poetry.dependencies]
lark-parser = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lark-js = 'larkjs.__main__:main'